# qstrader-examples

./: .env  README.md  main.py  momentum_taa.py  pyproject.toml  sixty_forty.py  streamlit_utils.py
data/: AGG.csv  SPY.csv  XLB.csv  XLC.csv  XLE.csv  XLF.csv  XLI.csv  XLK.csv  XLP.csv  XLU.csv  XLV.csv  XLY.csv
