[tool.poetry]
name = "qs-trader"
version = "0.1.0"
description = ""
authors = ["Charles Weill <c@weill.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.10.0"
isort = "^5.13.2"
qstrader = "^0.3.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
